Revamped Personal Website
- More minimal page
- One page layout
- Brief descriptions for each project

--- a/index.html
+++ b/index.html
@@ -1,96 +1,152 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE HTML>
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<head>
-    <title>Ricky Shin</title>
-    <meta charset="UTF-8">
-    <meta name="author" content="Richard Shin">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Open Graph Tags -->
-    <meta property="og:url" content="https://www.rickyshin.com/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Richard's Personal Website">
-    <meta property="og:description" content="Richard's (aka Ricky) personal website showcasing personal projects">
-    <meta property="og:image" content="https://www.rickyshin.com/imgs/index-framed.png">
-
-    <!-- Twitter Meta Tags -->
-    <meta property="twitter:url" content="https://www.rickyshin.com/">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Richard's Personal Website">
-    <meta name="twitter:description" content="Richard's (aka Ricky) personal website showcasing personal projects">
-    <meta name="twitter:image" content="https://www.rickyshin.com/imgs/index-framed.png">
-
-
-    <link rel="apple-touch-icon" sizes="180x180" href="/imgs/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/imgs/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/imgs/favicon/favicon-16x16.png">
-    <link rel="stylesheet" type="text/css" href="global.css">
-    <link rel="stylesheet" type="text/css" href="badge.css">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  <title>Richard Shin</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- OpenGraph -->
+  <meta property="og:title" content="Richard Shin" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.rickyshin.com/" />
+  <meta property="og:description" content="Richard's personal website showcasing personal projects.">
+  <meta property="og:image" content="https://www.rickyshin.com/imgs/index-framed.png">
+  
+  <!-- Twitter Tags -->
+  <meta property="twitter:url" content="https://www.rickyshin.com/">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Richard's Personal Website">
+  <meta name="twitter:description" content="Richard's personal website showcasing personal projects.">
+  <meta name="twitter:image" content="https://www.rickyshin.com/imgs/index-framed.png">
+  
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="icon" type="image/png" href="images/favicon-32x32.png">
 </head>
 
 <body>
-    <h1>Ricky Shin</h1>
-    <nav style="text-align: center;">
-        <a href="/index">Home</a>
-        <a href="/shin_resume.pdf">Resume</a>
-        <a href="mailto:hi@rickyshin.com">Contact</a>
-    </nav>
-    <h4>About Me</h4>
-    <center>
-        <lottie-player src="imgs/student.json" background="transparent" speed="1" style="width: 300px; height: 300px;"
-            loop autoplay></lottie-player>
-    </center>
-    <ul>
-        <li>Third-year Computer Science student at <a href="https://www.columbia.edu/" target="_blank">Columbia
-                University</a></li>
-        <ul>
-            <li>TA for <i>Computing in Context</i> (<a
-                    href="http://www.columbia.edu/cu/bulletin/uwb/#/cu/bulletin/uwb/subj/COMS/W1002-20203-001/"
-                    target="_blank">COMS W1002</a>)</li>
-            <li>Vice Chair of Technology at <a
-                    href="https://thefoodpantry.studentgroups.columbia.edu/people/richard-shin" target="_blank">The Food
-                    Pantry at Columbia</a></li>
-        </ul>
-        <li>Previously interned at <a href="https://foursquare.com/" target="_blank">Foursquare</a> (Summer 2019)</li>
-        <li>U.S. Army Veteran (2013 ~ 2016)</li>
+  <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+    <tr style="padding:0px">
+      <td style="padding:0px">
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr style="padding:0px">
+            <td style="padding:2.5%;width:63%;vertical-align:middle">
+              <p style="text-align:center">
+                <name><nameinfo style="cursor: help; font-style: italic;" title="I usually go by Ricky with friends and family ☺️">Richard</nameinfo> Shin</name>
+              </p>
+              <p>
+                Hi! I am a third-year undergraduate student at <a href="https://www.columbia.edu/">Columbia University</a>, where I study Computer Science. 
+              </p>
+              <p>
+                I previously interned at <a href="https://foursquare.com/">Foursquare</a> where I worked with the Venues team to make <a href="https://foursquare.com/city-guide">City Guide</a> and <a href="https://www.swarmapp.com/">Swarm</a> better using big data. Prior to studying CS I served active duty in the U.S. Army as a Radio Communications Team Lead.
+              </p>
+              <p>
+                Currently I am a TA for <a href="http://www.columbia.edu/cu/bulletin/uwb/#/cu/bulletin/uwb/subj/COMS/W1002-20203-001/">COMS W1002</a> - my office hours are held virtually every Friday from 12 PM to 2 PM (ET); the Zoom link can be found in the course Google Calendar page.
+              </p>
+              <p style="text-align:center">
+                <a href="mailto:hi@rickyshin.com">Email</a> &nbsp/&nbsp
+                <a href="shin_resume.pdf">Résumé</a> &nbsp/&nbsp
+                <a href="https://www.linkedin.com/in/ricky-shin/">LinkedIn</a> &nbsp/&nbsp
+                <a href="https://github.com/ricky-shin">GitHub</a>
+              </p>
+            </td>
+            <td style="padding:2.5%;width:40%;max-width:40%">
+              <img style="width:100%;max-width:100%; border-radius: 50%;" alt="Richard Shin Headshot" src="images/headshot.png" class="hoverZoomLink"></img>
+            </td>
+          </tr>
+        </tbody></table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Personal Projects</heading>
+              <p>
+                I love working on and creating software to tackle tough problems. Most of my projects are solo ventures but I love working with others as well.
+              </p>
+            </td>
+          </tr>
+        </tbody></table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-    </ul>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/tfp_graph.PNG" alt="The Food Pantry at Columbia Graph" width="175" >
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://thefoodpantry.us/">
+                <papertitle><img src="images/new.gif" /> The Food Pantry at Columbia (e-Commerce Web App)</papertitle>
+              </a>
+              <br />
+              Tech Stack: PHP, MySQL
+              <br />
+              Role: Project Management, Software Engineer
+              <br />
+              
+              <p>Lead the development and implementation of an e-Commerce platform to overhaul the logistical proecss at a non-profit pantry serving ~600 university students per month. Complete overhaul of inventory management, order processing, and client management. Deployed with AWS LightSail.</p>
+            </td>
+          </tr>
 
-    <h4>Personal Projects</h4>
-    <ul>
-        <!--
-        <li><span class="badge badge--success badge--smaller">NEW!</span> <a href="https://thefoodpantry.us/"
-                target="_blank">The Food Pantry at Colubmia (eCommerce Platform)</a>, developing and implementing an
-            eCommerce platform
-            to improve efficiency in a student-run, non-profit food pantry
-                <a
-                href="/projects/food-pantry.html">[read more]</a>
-        </li>
-        -->
-        <li> <a href="https://github.com/ricky-shin/gatekeeper" target="_blank">Gatekeeper</a>, a Discord bot that
-            allows server
-            administrators to seamlessly integrate custom domain email verification for their users
-            <!-- <a
-                href="/projects/gatekeeper.html">[read more]</a> -->
-        </li>
-        <li><a href="https://www.covidinnyc.com/" target="_blank">COVIDinNYC.com</a>, a website that
-            automatically fetches and charts data related to the COVID-19 pandemic in NYC <a
-                href="/projects/covid-in-nyc">[read more]</a>
-        </li>
-        <li><a href="https://github.com/ricky-shin/bulpa" target="_blank">bulpa.info</a>, a professor review website
-            specific to Baruch College, City University of New
-            York <a href="/projects/bulpa">[read more]</a> </li>
-        <li><a href="/projects/escape-area-51" target="_blank">Ecape
-                Area 51: Raid Survival</a>, a side-scrolling game currently live on the iOS App Store, with hundreds of
-            downloads worldwide <a href="/projects/escape-area-51">[read more]</a></li>
-    </ul>
-    <footer>
-        <div style="font-style: italic; font-size: x-small;">
-            Updated: September 12th, 2020
-        </div>
-    </footer>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/gk_diagram.png" alt="Gatekeeper Diagram" width="175" >
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://github.com/ricky-shin/bulpa">
+                <papertitle> Gatekeeper (Discord Bot)</papertitle>
+              </a>
+              <br>
+              Tech Stack: Node.js, MySQL <br />
+              Role: Sole Developer
+              <br>
+              <p>Created and open-sourced a <whatis style="cursor: help; font-style: italic;" title="A chatting platform similar to Slack and Microsoft Teams">Discord</whatis> bot that allows server administrators to seamlessly integrate custom domain email verification. Implements a third-party API to send emails.</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/bulpa_flow.png" alt="BULPA Homepage" width="175" >
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://github.com/ricky-shin/bulpa">
+                <papertitle> College Professor Review Website (Web App)</papertitle>
+              </a>
+              <br>
+              Tech Stack: PHP, MySQL <br />
+              Role: Sole Developer
+              <br>
+              <p>Created and launched a college-specific professor review site where students could submit anonymous reviews rating professors. Before closing down the site, there were ~200 anonymous reviews, with ~9,500 pages viewed from ~950 users.</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/escape51-inhand.jpg" alt="Picture of someone playing the game" width="175">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="images/escapearea51-appstore.png">
+                <papertitle> Escape Area 51 (iOS App)</papertitle>
+              </a>
+              <br>
+              Tech Stack: Swift<br />
+              Role: Sole Developer
+              <br>
+              <p>Created and launched an iOS game on the App Store that reached hundreds of downloads in over 20 countries. Inspired by the <a href="https://en.wikipedia.org/wiki/Storm_Area_51">Storm Area 51</a> meme and <i>Flappy Bird</i> for game design.</p>
+            </td>
+          </tr>
+
+
+        </tbody></table>
+
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+          <tr>
+        	<td>
+        	  <br>
+        	  <p align="right"><font size="2">
+          	    Last updated October 2020
+          	  </font>
+        	  </p>
+        	</td>
+      	  </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
 </body>
 
 </html>
