--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/tfp_graph.PNG" alt="The Food Pantry at Columbia Graph" width="175" >
+              <img src="images/tfp_graph.png" alt="The Food Pantry at Columbia Graph" width="175" >
             </td>
             <td width="75%" valign="middle">
               <a href="https://thefoodpantry.us/">
