Fix Link for Gatekeeper showcase
Linked the wrong project!

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <img src="images/gk_diagram.png" alt="Gatekeeper Diagram" width="175" >
             </td>
             <td width="75%" valign="middle">
-              <a href="https://github.com/ricky-shin/bulpa">
+              <a href="https://github.com/ricky-shin/gatekeeper">
                 <papertitle> Gatekeeper (Discord Bot)</papertitle>
               </a>
               <br>
@@ -100,7 +100,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/bulpa_flow.png" alt="BULPA Homepage" width="175" >
+              <img src="images/bulpa_flow.png" alt="BULPA Flow Graph" width="175" >
             </td>
             <td width="75%" valign="middle">
               <a href="https://github.com/ricky-shin/bulpa">
