Change intro bio
Wording was a little awkward

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <name><nameinfo style="cursor: help; font-style: italic;" title="I usually go by Ricky with friends and family ☺️">Richard</nameinfo> Shin</name>
               </p>
               <p>
-                Hi! I am a third-year undergraduate student at <a href="https://www.columbia.edu/">Columbia University</a>, where I study Computer Science. 
+                Hi! I am a third-year undergraduate student at <a href="https://www.columbia.edu/">Columbia University</a> studying Computer Science. 
               </p>
               <p>
                 I previously interned at <a href="https://foursquare.com/">Foursquare</a> where I worked with the Venues team to make <a href="https://foursquare.com/city-guide">City Guide</a> and <a href="https://www.swarmapp.com/">Swarm</a> better using big data. Prior to studying CS I served active duty in the U.S. Army as a Radio Communications Team Lead.
