Fixed path of index-framed.png
Had incorrect path to image

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.rickyshin.com/" />
   <meta property="og:description" content="Richard's personal website showcasing personal projects.">
-  <meta property="og:image" content="https://www.rickyshin.com/imgs/index-framed.png">
+  <meta property="og:image" content="https://www.rickyshin.com/images/index-framed.png">
   
   <!-- Twitter Tags -->
   <meta property="twitter:url" content="https://www.rickyshin.com/">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Richard's Personal Website">
   <meta name="twitter:description" content="Richard's personal website showcasing personal projects.">
-  <meta name="twitter:image" content="https://www.rickyshin.com/imgs/index-framed.png">
+  <meta name="twitter:image" content="https://www.rickyshin.com/images/index-framed.png">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="icon" type="image/png" href="images/favicon-32x32.png">
