--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 I previously interned at <a href="https://foursquare.com/">Foursquare</a> where I worked with the Venues team to make <a href="https://foursquare.com/city-guide">City Guide</a> and <a href="https://www.swarmapp.com/">Swarm</a> better using big data. Prior to studying CS I served active duty in the U.S. Army as a Radio Communications Team Lead.
               </p>
               <p>
-                Currently I am a TA for <a href="http://www.columbia.edu/cu/bulletin/uwb/#/cu/bulletin/uwb/subj/COMS/W1002-20203-001/">COMS W1002</a> - my office hours are held virtually every Friday from 12 PM to 2 PM (ET); the Zoom link can be found in the course Google Calendar page.
+                Currently I am a TA for <a href="http://www.columbia.edu/cu/bulletin/uwb/#/cu/bulletin/uwb/subj/COMS/W1002-20203-001/">COMS W1002</a>. If you're a student in this class, my office hours are held virtually every Friday from 12 PM to 2 PM (ET) - Zoom link can be found on the course calendar page.
               </p>
               <p style="text-align:center">
                 <a href="mailto:hi@rickyshin.com">Email</a> &nbsp/&nbsp
