--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               Role: Project Management, Software Engineer
               <br />
               
-              <p>Lead the development and implementation of an e-Commerce platform to overhaul the logistical proecss at a non-profit pantry serving ~600 university students per month. Complete overhaul of inventory management, order processing, and client management. Deployed with AWS LightSail.</p>
+              <p>Lead the development and implementation of an e-Commerce platform to overhaul the logistical process at a non-profit pantry serving ~600 university students per month. Complete overhaul of inventory management, order processing, and client management. Deployed with AWS LightSail.</p>
             </td>
           </tr>
 
