--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name><nameinfo style="cursor: help; font-style: italic;" title="I usually go by Ricky with friends and family ☺️">Richard</nameinfo> Shin</name>
+                <name><!--<nameinfo style="cursor: help; font-style: italic;" title="I usually go by Ricky with friends and family ☺️">-->Richard</nameinfo> Shin</name>
               </p>
               <p>
-                Hi! I am a third-year undergraduate student at <a href="https://www.columbia.edu/">Columbia University</a> studying Computer Science. 
+                Hi! I am a third-year undergraduate student at <a href="https://www.columbia.edu/" target="_blank">Columbia University</a> studying Computer Science. 
               </p>
               <p>
-                I previously interned at <a href="https://foursquare.com/">Foursquare</a> where I worked with the Venues team to make <a href="https://foursquare.com/city-guide">City Guide</a> and <a href="https://www.swarmapp.com/">Swarm</a> better using big data. Prior to studying CS I served active duty in the U.S. Army as a Radio Communications Team Lead.
+                I previously interned at <a href="https://foursquare.com/" target="_blank">Foursquare</a> where I worked with the Venues team to make <a href="https://foursquare.com/city-guide" target="_blank">City Guide</a> and <a href="https://www.swarmapp.com/" target="_blank">Swarm</a> better using big data.
               </p>
               <p>
-                Currently I am a TA for <a href="http://www.columbia.edu/cu/bulletin/uwb/#/cu/bulletin/uwb/subj/COMS/W1002-20203-001/">COMS W1002</a>. If you're a student in this class, my office hours are held virtually every Friday from 12 PM to 2 PM (ET) - Zoom link can be found on the course calendar page.
+                I was a TA for the Fall '20 section of <i>Computing in Context</i> (<a href="http://www.columbia.edu/cu/bulletin/uwb/#/cu/bulletin/uwb/subj/COMS/W1002-20203-001/" target="_blank">COMS W1002</a>) where I held weekly labs and office hours in Python.
               </p>
               <p style="text-align:center">
                 <a href="mailto:hi@rickyshin.com">Email</a> &nbsp/&nbsp
@@ -59,7 +59,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <img style="width:100%;max-width:100%; border-radius: 50%;" alt="Richard Shin Headshot" src="images/headshot.png" class="hoverZoomLink"></img>
+              <img style="width:100%;max-width:100%; border-radius: 50%;" alt="Richard Shin Headshot" src="images/headshot.jpg" class="hoverZoomLink"></img>
             </td>
           </tr>
         </tbody></table>
@@ -86,7 +86,7 @@
               <br />
               Tech Stack: PHP, MySQL
               <br />
-              Role: Project Management, Software Engineer
+              Role: Lead Developer
               <br />
               
               <p>Lead the development and implementation of an e-Commerce platform to overhaul the logistical process at a non-profit pantry serving ~600 university students per month. Complete overhaul of inventory management, order processing, and client management. Deployed with AWS LightSail.</p>
@@ -149,7 +149,7 @@
         	<td>
         	  <br>
         	  <p align="right"><font size="2">
-          	    Last updated October 2020
+          	    Last updated <i>December 2020</i>
           	  </font>
         	  </p>
         	</td>
