--- a/index.html
+++ b/index.html
@@ -43,19 +43,24 @@
                 <name><!--<nameinfo style="cursor: help; font-style: italic;" title="I usually go by Ricky with friends and family ☺️">-->Richard</nameinfo> Shin</name>
               </p>
               <p>
-                Hi! I am a third-year undergraduate student at <a href="https://www.columbia.edu/" target="_blank">Columbia University</a> studying Computer Science. 
+                Third-year undergraduate student at <a href="https://www.columbia.edu/" target="_blank">Columbia University</a> studying Computer Science with an interest in software engineering.
               </p>
               <p>
-                I previously interned at <a href="https://foursquare.com/" target="_blank">Foursquare</a> where I worked with the Venues team to make <a href="https://foursquare.com/city-guide" target="_blank">City Guide</a> and <a href="https://www.swarmapp.com/" target="_blank">Swarm</a> better using big data.
+                Previously: <a href="https://foursquare.com/" target="_blank">Foursquare</a> (Intern), <a href="https://www.army.mil/" target="_blank">U.S. Army</a> (Active Duty)
               </p>
               <p>
-                I was a TA for the Fall '20 section of <i>Computing in Context</i> (<a href="http://www.columbia.edu/cu/bulletin/uwb/#/cu/bulletin/uwb/subj/COMS/W1002-20203-001/" target="_blank">COMS W1002</a>) where I held weekly labs and office hours in Python.
+                Teaching Assistant for: <br />
+                <ul>
+                  <li><i>Intro. to CS/Programming in Java</i> (<a href="http://www.columbia.edu/cu/bulletin/uwb/#/cu/bulletin/uwb/subj/COMS/W1004-20211-001/" target="_blank">COMS W1004</a>) - Spring '21</li>
+                  <li><i>Computing in Context</i> (<a href="http://www.columbia.edu/cu/bulletin/uwb/#/cu/bulletin/uwb/subj/COMS/W1002-20203-001/" target="_blank">COMS W1002</a>) -  Fall '20</li>
+                </ul>
+                
               </p>
               <p style="text-align:center">
-                <a href="mailto:hi@rickyshin.com">Email</a> &nbsp/&nbsp
-                <a href="shin_resume.pdf">Résumé</a> &nbsp/&nbsp
-                <a href="https://www.linkedin.com/in/ricky-shin/">LinkedIn</a> &nbsp/&nbsp
-                <a href="https://github.com/ricky-shin">GitHub</a>
+                <a href="mailto:hi@rickyshin.com">E-mail</a> &nbsp/&nbsp
+                <!-- <a href="shin_resume.pdf">Résumé</a> &nbsp/&nbsp -->
+                <a href="https://www.linkedin.com/in/ricky-shin/" target="_blank">LinkedIn</a> &nbsp/&nbsp
+                <a href="https://github.com/ricky-shin" target="_blank">GitHub</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
@@ -149,7 +154,7 @@
         	<td>
         	  <br>
         	  <p align="right"><font size="2">
-          	    Last updated <i>December 2020</i>
+          	    Last updated <i>January 2021</i>
           	  </font>
         	  </p>
         	</td>
