Project links new tab
Making project links open in a new tab when clicked

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <img src="images/tfp_graph.png" alt="The Food Pantry at Columbia Graph" width="175" >
             </td>
             <td width="75%" valign="middle">
-              <a href="https://thefoodpantry.us/">
+              <a href="https://thefoodpantry.us/" target="_blank">
                 <papertitle><img src="images/new.gif" /> The Food Pantry at Columbia (e-Commerce Web App)</papertitle>
               </a>
               <br />
@@ -103,7 +103,7 @@
               <img src="images/gk_diagram.png" alt="Gatekeeper Diagram" width="175" >
             </td>
             <td width="75%" valign="middle">
-              <a href="https://github.com/ricky-shin/gatekeeper">
+              <a href="https://github.com/ricky-shin/gatekeeper" target="_blank">
                 <papertitle> Gatekeeper (Discord Bot)</papertitle>
               </a>
               <br>
@@ -119,7 +119,7 @@
               <img src="images/bulpa_flow.png" alt="BULPA Flow Graph" width="175" >
             </td>
             <td width="75%" valign="middle">
-              <a href="https://github.com/ricky-shin/bulpa">
+              <a href="https://github.com/ricky-shin/bulpa" target="_blank">
                 <papertitle> College Professor Review Website (Web App)</papertitle>
               </a>
               <br>
@@ -135,7 +135,7 @@
               <img src="images/escape51-inhand.jpg" alt="Picture of someone playing the game" width="175">
             </td>
             <td width="75%" valign="middle">
-              <a href="images/escapearea51-appstore.png">
+              <a href="images/escapearea51-appstore.png" target="_blank">
                 <papertitle> Escape Area 51 (iOS App)</papertitle>
               </a>
               <br>
