--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
               <p>
                 Teaching Assistant for: <br />
                 <ul>
-                  <li><i>Intro. to CS/Programming in Java</i> (<a href="http://www.columbia.edu/cu/bulletin/uwb/#/cu/bulletin/uwb/subj/COMS/W1004-20211-001/" target="_blank">COMS W1004</a>) - Spring '21</li>
-                  <li><i>Computing in Context</i> (<a href="http://www.columbia.edu/cu/bulletin/uwb/#/cu/bulletin/uwb/subj/COMS/W1002-20203-001/" target="_blank">COMS W1002</a>) -  Fall '20</li>
+                  <li><a href="http://www.columbia.edu/cu/bulletin/uwb/#/cu/bulletin/uwb/subj/COMS/W1004-20211-001/" target="_blank">COMS W1004</a> - <i>Intro. to CS/Programming in Java</i> (Spring '21)</li>
+                  <li><a href="http://www.columbia.edu/cu/bulletin/uwb/#/cu/bulletin/uwb/subj/COMS/W1002-20203-001/" target="_blank">COMS W1002</a> - <i>Computing in Context</i>  (Fall '20)</li>
                 </ul>
                 
               </p>
